<resources>
    <string name="app_name">androidapp</string>
    <string name="simuglove">SIMUGlove</string>
    <string name="rx">RX:</string>
    <string name="read_buffer">Read Buffer</string>
    <string name="status">Status:</string>
    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="bluetooth_on">Bluetooth ON</string>
    <string name="bluetooth_off">Bluetooth OFF</string>
    <string name="show_paired_devices">Show paired Devices</string>
    <string name="discover_new_devices">Discover New Devices</string>
</resources>